task4-app/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: task4-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: backend
          image: ghcr.io/abdelrahman679/t4-backend:2.0
          ports:
            - containerPort: 80

          volumeMounts:
            - name: db-password
              mountPath: /etc/app-secrets
              readOnly: true

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "128Mi"

      volumes:
        - name: db-password
          secret:
            secretName: db-password
            items:
              - key: password
                path: db-password
