task4-app/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: task4-app
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
